--- a/styles.css
+++ b/styles.css
@@ -6,29 +6,35 @@
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: minmax(300px, 1fr) 4fr;
+  grid-template-rows: minmax(175px, 1fr) 4fr;
+  height: 100vh;
 }
+
+/*////////
+  HEADER
+////////*/
 
 header {
   display: grid;
   grid-template-columns: 2fr 1fr; 
   grid-column: 2;
-  height: 15vh;
 }
 
 .header-top {
-  display: grid;
   grid-column: span 2;
 }
 
 .header-top-1 {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
   grid-column: 1;
 }
 
 .header-top-2 {
-  grid-column: 2;
   display: grid;
   grid-template-columns: repeat(3, 100px);
+  grid-column: 2;
   justify-content: end;
 }
 
@@ -50,15 +56,44 @@ header {
   justify-content: end;
 }
 
+/*/////////
+  SIDEBAR
+/////////*/
+
 .sidebar {
-  grid-column: 1;
-  grid-row: 1/3;
   display: grid;
+  grid-template-rows: repeat(3, minmax(min-content, 100px));
+  grid-column: 1;
+  grid-row: 1 / 3;
+  align-items: center;
+  padding-left: 60px;
   background-color: lightcoral;
+} 
+
+ul {
+  list-style: none;
 }
 
+/*/////////
+  CONTENT
+/////////*/
+
 .dashboard-display {
+  display: grid;
+  grid-template-columns: minmax(min-content, 3fr) minmax(300px, 1fr);
   grid-column: 2;
   background-color: lightgreen;
-  height: 85vh;
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+  gap: 30px;
+  grid-row: span 2;
+  padding: 20px;
+}
+
+.card {
+  border: 1px solid black;
+  padding: 20px
 }
