--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 * {
   margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
+  font-family:Arial, Helvetica, sans-serif;
 }
 
 .container {
   display: grid;
   grid-template-columns: minmax(300px, 1fr) 4fr;
-  grid-template-rows: minmax(175px, 1fr) 4fr;
+  grid-template-rows: 1fr 4fr;
   height: 100vh;
 }
 
@@ -19,6 +19,7 @@ header {
   display: grid;
   grid-template-columns: 2fr 1fr; 
   grid-column: 2;
+  box-sizing: border-box;
 }
 
 .header-top {
@@ -62,16 +63,28 @@ header {
 
 .sidebar {
   display: grid;
-  grid-template-rows: repeat(3, minmax(min-content, 100px));
+  grid-template-rows: repeat(3, min-content);
   grid-column: 1;
   grid-row: 1 / 3;
-  align-items: center;
-  padding-left: 60px;
+  align-items: start;
+  padding-top: 1.5rem;
+  gap: 1.5rem;
   background-color: lightcoral;
 } 
 
+.sidebar li {
+  padding: 0.5rem;
+}
+
+.dashboard-heading {
+  font-size: 2.5rem;
+  padding-left: 40px;
+}
+
 ul {
   list-style: none;
+  font-size: 1.5rem;
+  padding-left: 45px;
 }
 
 /*/////////
@@ -80,17 +93,31 @@ ul {
 
 .dashboard-display {
   display: grid;
-  grid-template-columns: 3fr minmax(300px, 1fr);
+  grid-template-columns: 3fr minmax(325px, 1fr);
   grid-column: 2;
   background-color: lightgreen;
+  height: 1fr;
+}
+
+.projects-container{
+  display: grid;
+  grid-template-rows: 40px 1fr;
+}
+
+.projects-heading {
+  padding-left: 20px;
+  align-self: end;
+  padding-bottom: 5px;
 }
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(2, minmax(200px, 1fr));
+  grid-template-rows: 1fr 1fr 1fr;
   grid-column: 1;
-  gap: 30px;
+  gap: 20px;
   padding: 20px;
+  padding-top: 0px;
   align-content: start;
 }
 
@@ -98,8 +125,8 @@ ul {
   border: 1px solid black;
   padding: 20px;
   display: grid;
-  grid-template-rows: 100px 100px;
-  max-height: 275px;
+  max-height: 300px;
+  overflow: hidden;
 }
 
 .announcements, .trending {
@@ -108,7 +135,11 @@ ul {
 
 .side-section {
   display: grid;
-  grid-template-rows: 400px 400px;
+  grid-template-rows: 20px 1fr 40px 1fr;
   padding: 20px;
-  gap: 30px
+}
+
+.announcements-heading, .trending-heading {
+  align-self: end;
+  padding-bottom: 5px;
 }
