--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@
   margin: 0px;
   padding: 0px;
   font-family:Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
 .container {
   display: grid;
   grid-template-columns: minmax(300px, 1fr) 4fr;
-  grid-template-rows: 180px 4fr;
+  grid-template-rows: 180px 1fr;
   height: 100vh;
 }
 
@@ -65,17 +66,35 @@ button {
   grid-row: 1 / 3;
   align-items: start;
   padding-top: 1.5rem;
-  gap: 1.5rem;
-  background-color: lightcoral;
+  gap: 1.5rem; 
+  background-color: #6d28d9;
+  color: white
 } 
 
 .sidebar li {
   padding: 0.5rem;
 }
 
+li {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  align-items: center;
+}
+
 .dashboard-heading {
   font-size: 2.5rem;
-  padding-left: 40px;
+  padding-left: 20px;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  align-items: center;
+}
+
+.dashboard-image {
+  height: 50px;
+}
+
+.sidebar-image {
+  height: 35px;
 }
 
 ul {
@@ -90,26 +109,31 @@ ul {
 
 .dashboard-display {
   display: grid;
-  grid-template-columns: 3fr minmax(325px, 1fr);
+  grid-template-columns: 3fr minmax(300px, 1fr);
   grid-column: 2;
-  background-color: lightgreen;
-  height: 1fr;
+  grid-row: 2;
+  background-color: #e7e5e4;
+  padding-bottom: 40px;
 }
 
-.projects-container{
+.projects-container {
   display: grid;
-  grid-template-rows: 40px 1fr;
+  grid-template-rows: 60px 1fr;
 }
 
 .projects-heading {
   padding-left: 20px;
   align-self: end;
-  padding-bottom: 5px;
+  padding-bottom: 5px; 
+}
+
+h2 {
+  font-size: 1.25rem;
 }
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(2, minmax(200px, 1fr));
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
   grid-template-rows: 1fr 1fr 1fr;
   grid-column: 1;
   gap: 20px;
@@ -119,24 +143,80 @@ ul {
 }
 
 .card {
-  border: 1px solid black;
   padding: 20px;
   display: grid;
-  max-height: 300px;
-  overflow: hidden;
+  border-radius: 10px;
+  background-color: white;
+  border-left: 8px solid goldenrod;
 }
 
+.card-top {
+  font-size: .92rem;
+  color: #44403c;
+}
+
+.card-title {
+  font-weight: bold;
+  padding-bottom: 5px;
+  font-size: 1rem;
+  color: black;
+}
+
+.card-bottom {
+  align-self: flex-end;
+  justify-self: flex-end;
+}
+
+/*/////////
+SIDE CONTENT
+/////////*/
+
 .announcements, .trending {
-  border: 1px solid black;
+  border-radius: 10px;
+  background-color: white;
 }
 
 .side-section {
   display: grid;
-  grid-template-rows: 20px 1fr 40px 1fr;
+  grid-template-rows: 40px 1fr 60px 1fr;
   padding: 20px;
+  padding-left: 0px;
 }
 
 .announcements-heading, .trending-heading {
   align-self: end;
   padding-bottom: 5px;
+}
+
+.trending {
+  display: grid;
+  grid-template-rows: repeat(4) 1fr;
+}
+
+.announcements {
+  display: grid;
+}
+
+hr {
+  border: 1px solid grey;
+}
+
+.trending, .announcements {
+  gap: 5px;
+  padding: 15px;
+  align-items: center;
+}
+
+.trending-section {
+  display: grid;
+  grid-template-columns: 1fr 2.5fr;
+}
+
+.trending-section, .announcements-section {
+  align-self: center;
+  overflow: hidden;
+}
+
+.announcement-header {
+  font-weight: bold;
 }
