--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 .container {
   display: grid;
   grid-template-columns: minmax(300px, 1fr) 4fr;
-  grid-template-rows: 180px 1fr;
+  grid-template-rows: 160px 1fr;
   height: 100vh;
 }
 
@@ -20,39 +20,88 @@ header {
   display: grid;
   grid-template-columns: 1.75fr 1.25fr;
   grid-template-rows: 4fr 6fr; 
-  row-gap: 20px;
   grid-column: 2;
-  box-sizing: border-box;
 }
+
 .search-bar-container {
-  align-self: end;
+  align-items: center;
   padding-left: 40px;
+  display: grid;
+  grid-template-columns: 40px 1fr;
+  height: 60px;
+  padding-top: 10px;
 }
+
+input {
+  width: 500px;
+  background-color: #e7e5e4;
+  border: none;
+  border-radius: 50px;
+  height: 25px;
+  padding-left: 10px;
+}
+
+input:focus {
+  border: none;
+  outline: none;
+}
+
+.search-icon {
+  height: 25px;
+}
+
 .header-top-right {
   display: grid;
-  grid-template-columns: repeat(3, 100px);
-  justify-content: end;
-  align-content: end;
-  padding-left: 40px;
+  grid-template-columns: .5fr 1fr 2.5fr;
+  gap: 20px;
+  align-items: center;
+  justify-self: end;
+  padding-top: 10px;
+}
+
+.notification-icon {
+  height: 25px;
+}
+
+.user-name {
+  font-weight: bold;
 }
 
 .header-bottom-left { 
   display: grid;
-  grid-template-columns: 125px 125px;
+  grid-template-columns: 110px 280px;
   align-content: center;
   padding-left: 40px;
+  align-items: center;
+}
+
+.header-bottom-left>div>p {
+  font-weight: bold;
+  font-size: .8rem;
+}
+
+.header-bottom-left>div>p:nth-of-type(2) {
+  font-size: 1.35rem
 }
 
 .button-container {
   display: grid;
-  grid-template-columns: repeat(3, 100px);
+  grid-template-columns: repeat(3, 95px);
   align-content: center;
   justify-content: end;
+  padding-right: 20px;
 }
 
 button {
   height: 30px;
   width: 75px;
+  border: none;
+  border-radius: 50px;
+  font-weight: bold;
+  font-size: .75rem;
+  color: white;
+  background-color: #4c1d95;
+  height: 35px;
 }
 
 /*/////////
@@ -66,9 +115,9 @@ button {
   grid-row: 1 / 3;
   align-items: start;
   padding-top: 1.5rem;
-  gap: 1.5rem; 
+  gap: 1.75rem; 
   background-color: #6d28d9;
-  color: white
+  color: white;
 } 
 
 .sidebar li {
@@ -82,7 +131,7 @@ li {
 }
 
 .dashboard-heading {
-  font-size: 2.5rem;
+  font-size: 2rem;
   padding-left: 20px;
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -90,17 +139,17 @@ li {
 }
 
 .dashboard-image {
-  height: 50px;
+  height: 40px;
 }
 
 .sidebar-image {
-  height: 35px;
+  height: 25px;
 }
 
 ul {
   list-style: none;
-  font-size: 1.5rem;
-  padding-left: 45px;
+  font-size: 1.25rem;
+  padding-left: 25px;
 }
 
 /*/////////
@@ -167,6 +216,15 @@ h2 {
   justify-self: flex-end;
 }
 
+.card-icon {
+  height: 25px;
+  margin: 5px;
+}
+
+.card-icon:hover {
+  cursor: pointer;
+}
+
 /*/////////
 SIDE CONTENT
 /////////*/
@@ -181,6 +239,7 @@ SIDE CONTENT
   grid-template-rows: 40px 1fr 60px 1fr;
   padding: 20px;
   padding-left: 0px;
+  justify-content: flex-start;
 }
 
 .announcements-heading, .trending-heading {
@@ -197,8 +256,18 @@ SIDE CONTENT
   display: grid;
 }
 
+.announcement-header {
+  font-size: .85rem;
+  font-weight: bold;
+}
+
+.announcements-section {
+  font-size: .8rem;
+  color: #44403c;
+}
+
 hr {
-  border: 1px solid grey;
+  border: 1px solid #e7e5e4;;
 }
 
 .trending, .announcements {
@@ -209,7 +278,11 @@ hr {
 
 .trending-section {
   display: grid;
-  grid-template-columns: 1fr 2.5fr;
+  grid-template-columns: 1fr 3fr;
+  font-size: 0.8rem;
+  color: #44403c;
+  align-items: center;
+  padding-left: 10px;
 }
 
 .trending-section, .announcements-section {
@@ -217,6 +290,12 @@ hr {
   overflow: hidden;
 }
 
-.announcement-header {
-  font-weight: bold;
+.trending-user>p:nth-of-type(1) {
+  font-weight: 600;
+  color: black;
+  font-size: .8rem;
+}
+
+.trending-image {
+  height: 45px;
 }
