--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ header {
   grid-template-columns: 1.75fr 1.25fr;
   grid-template-rows: 4fr 6fr; 
   grid-column: 2;
+  box-shadow: 0px 1px 10px gray;
+  position: relative;
 }
 
 .search-bar-container {
@@ -197,6 +199,7 @@ h2 {
   border-radius: 10px;
   background-color: white;
   border-left: 8px solid goldenrod;
+  box-shadow: 3px 3px 5px gray;
 }
 
 .card-top {
@@ -232,6 +235,7 @@ SIDE CONTENT
 .announcements, .trending {
   border-radius: 10px;
   background-color: white;
+  box-shadow: 3px 3px 5px gray;
 }
 
 .side-section {
